@@ -5,6 +5,7 @@ core:
 
 === Edge
 
+* Janne Asmala
 * Keith Bingman
 * Dirk Kelly
 * Anna billstrom
